# onepageblog-static

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
claude/plans/: 2026-04-28-testsweet-migration.md
claude/specs/: 2026-04-28-testsweet-migration-design.md
docs/: design.md
docs/plans/: 2026-04-04-onepageblog-static.md  2026-04-06-editorial-redesign.md
onepageblog/: __main__.py  cli.py  config.py  posts.py  renderer.py  writer.py
onepageblog/static/: default.css  fonts.css
onepageblog/templates/: ajax.html.j2  feed.xml.j2  index.html.j2  post.html.j2
scripts/: build-assets.js
tests/: config.py  conftest.py  posts.py  renderer.py  test_config.py  test_posts.py  test_renderer.py  test_writer.py  writer.py
