[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onepageblog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "markdown",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-unmagic",
]

[project.scripts]
onepageblog = "onepageblog.cli:main"

[tool.setuptools.packages.find]
# Prevent setuptools from discovering packages inside node_modules/ at build time.
include = ["onepageblog*"]

[tool.setuptools.package-data]
onepageblog = ["templates/*", "static/*", "static/fonts/*"]
