[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onepageblog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "markdown",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "testsweet",
]

[project.scripts]
onepageblog = "onepageblog.cli:main"

[tool.setuptools.packages.find]
# Prevent setuptools from discovering packages inside node_modules/ at build time.
include = ["onepageblog*"]

[tool.setuptools.package-data]
onepageblog = ["templates/*", "static/*", "static/fonts/*"]

[tool.uv.sources]
testsweet = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.testsweet.discovery]
include_paths = ["tests"]
test_files = ["*.py"]
